<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.FormularioItensActivity">


        <ImageView
            android:id="@+id/activity_formulario_item_imagem"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/imagem_padrao" />

        <Button
            android:id="@+id/activityFormularioEscolherImg"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/inserir_imagem"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_item_imagem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_itemperdido_textinput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activityFormularioEscolherImg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_item_itemperdido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_situacao_textinput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formulario_itemperdido_textinput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_item_situacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/situa_o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_local_textinput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formulario_situacao_textinput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_item_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/local" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/formulario_Contato_textinput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formulario_local_textinput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_contato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contato" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/activityFormulariosalvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/salvar"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formulario_Contato_textinput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
